fixes for frontend
