# backend/app/api/forms.py
@@ -81,7 +81,8 @@ class Forms(Resource):
                     "answers": [{
                         'type': QuestionType.RELATION.name,
                         'id': item.id,
-                        'value': item.name
+                        'value': item.name,
+                        'relation_type': item.form_type.name
                     }]
                 } for item in forms
             ]
@@ -124,14 +125,12 @@ class Forms(Resource):
         return ans_object
 
     @staticmethod
-    def _solve_form_filter(filter: JSON, name_substring: str) -> Set[int]:
+    def _solve_form_filter(filter: JSON, name_substring: str) -> Set[int] | None:
+        if not Forms._check_filter_consistency(filter):
+            return None
         question_id = filter.get('question_id')
-        if question_id is None:
-            return None
         row_question_id = filter.get('row_question_id')
-        exact_value = filter.get('exact_value')
-        if type(exact_value) not in {bool, int, str}:
-            return None
+        exact_values = filter.get('exact_values')
         min_value = filter.get('min_value')
         max_value = filter.get('max_value')
 
@@ -144,9 +143,25 @@ class Forms(Resource):
         if type(substring) != str:
             return None
 
-        return Form.filter(name_substr=name_substring, question_id=question_id, exact_value=exact_value,
+        return Form.filter(name_substr=name_substring, question_id=question_id, exact_values=exact_values,
                            min_value=min_value, max_value=max_value, substring=substring,
                            row_question_id=row_question_id)
+
+    @staticmethod
+    def _check_filter_consistency(filter: JSON) -> bool:
+        question_id = filter.get('question_id')
+        if question_id is None:
+            return False
+        exact_values = filter.get('exact_values')
+        if not isinstance(exact_values, list):
+            return False
+        if len(exact_values) == 0:
+            return False
+        if len(set(type(item) for item in exact_values)) != 1:
+            return False
+        if type(exact_values[0]) not in {bool, int, str}:
+            return False
+        return True
 
     @staticmethod
     def _update_form_data(content: JSON, form_state: FormState, form_type: FormType, deleted: bool) -> Response:
