# backend/app/database/relation_type.py
@@ -4,10 +4,8 @@ from enum import Enum
 
 
 class RelationType(Enum):
-    LEADER_TO_LEADER = 0
-    LEADER_TO_PROJECT = 1
-    PROJECT_TO_LEADER = 2
-    PROJECT_TO_PROJECT = 3
+    LEADER = 1
+    PROJECT = 2
 
     @staticmethod
     def __contains__(item: str) -> bool:
